--- a/InverGrove.Web/Content/less/login.css
+++ b/InverGrove.Web/Content/less/login.css
@@ -739,6 +739,11 @@ form .ng-dirty.ng-valid {
 .worship-info strong {
   font-size: 16px;
 }
+@media (max-width: 377px) {
+  .worship-info h3.title:after {
+    top: 42px;
+  }
+}
 body > .wrapper {
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
